<resources>
    <string name="app_name">BluetoothApp</string>
    <string name="title_activity_pump">PumpActivity</string>
    <string name="title_activity_sensor">SensorActivity</string>
    <string name="title_activity_hard_pump">HardPumpActivity</string>

    <string name="title_devices">BLE Device Scan</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">透传接收:</string>
    <string name="label_device_name">设备名称:</string>
    <string name="label_device_address">MAC地址:</string>
    <string name="label_state">连接状态:</string>
    <string name="no_data">No data</string>
    <string name="connected">连接设备</string>
    <string name="connecting">连接中....</string>
    <string name="disconnected">断开连接</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="TXD">发送数据:</string>

    <string name="menu_connect">连接设备</string>
    <string name="menu_disconnect">断开连接</string>

</resources>
